# galaxy-renderer

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: camera.rs  galaxy.rs  guidelines.rs  lib.rs  main.rs  shader.comp.wgsl  shader.wgsl
