[package]
name = "procedural-galaxy"
version = "0.1.0"
authors = ["Lesley Lai <lesley@lesleylai.info>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "24.0.3"
winit = { version = "0.29", features = ["rwh_05"] }
bytemuck = { version = "1.10.0", features = ["derive"] }
rand = "0.9.0"
rand_distr = "0.5.1"
log = "0.4.27"
