[package]
name = "procedural-galaxy"
version = "0.1.0"
authors = ["Lesley Lai <lesley@lesleylai.info>"]
edition = "2018"
resolver = "2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[dependencies]
cgmath = "0.18.0"
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = "25.0.0"
winit = { version = "0.29", features = ["rwh_05"] }
bytemuck = { version = "1.10.0", features = ["derive"] }
rand = "0.9.1"
rand_distr = "0.5.1"
log = "0.4.27"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
wgpu = { version = "25.0", features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }